--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -257,8 +257,77 @@ a {
 }
 
 /* ===============WORLD GAME ============ */
-.world-game-slider-text {
+/* ======== FIRST SLIDER  */
+.world-game-heading-box {
+  max-width: 632px;
+
+  h2 {
+    line-height: 150%;
+  }
+
+  p {
+    max-width: 516px;
+  }
+}
+
+.world-game-slider {
+  margin-top: 51px;
+
+  ul li {
+    display: none;
+  }
+
+  .slick-list .slick-track {
+    display: flex !important;
+    gap: 30px !important;
+
+    .slick-slide {
+      max-width: 494px;
+      max-height: 461px;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.center-text-div {
+  width: 100%;
+  min-height: 25%;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.378);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  padding: 20px;
+}
+
+.world-game-img-title {
+  font-size: 28px;
+  color: white;
+  margin-bottom: 8px;
+}
+
+.world-game-img-description {
+  font-size: 22px;
+}
+
+/* ============ SECOND SLIDER =============== */
+/* .world-game-slider-text {
   margin-top: 27px;
+}
+.prev{
+  transform: rotate(-180deg);
+  width: 25px;
+  transition: all 300ms linear;
+}
+.prev:hover{
+  scale: 1.5;
+}
+.next {
+  width: 25px;
+  transition: all 300ms linear;
+}
+.next:hover{  
+  scale: 1.5;
 }
 
 .world-game-slider .slick-list .slick-track {
@@ -314,7 +383,8 @@ a {
 
 .cursor-pointer {
   cursor: pointer;
-}
+} */
+/* ========== SECOND SLIDER END ============== */
 
 /*============ FAQs CSS START ============*/
 .faq_gradient {
@@ -581,9 +651,15 @@ a {
     max-width: 250px;
     top: -130px;
   }
+  .world-game-img-title{
+    font-size: 24px;
+  }
+  .world-game-img-description{
+    font-size: 20px ;
+  }
 
-  /* WORLD GAME SLIDER */
-  .world-game-slider .slick-list .slick-track .slick-current img {
+  /* WORLD GAME SLIDER SECOND SLIDER  */
+  /* .world-game-slider .slick-list .slick-track .slick-current img {
     max-width: 350px;
     height: 400px;
     opacity: 100%;
@@ -592,22 +668,11 @@ a {
   .world-game-arrow {
     bottom: 20%;
     right: 19%;
-  }
+  } */
 
 }
 
-@media (max-width:1024.98px) {
-  .ml-lg-0 {
-    margin-left: 0;
-  }
-  .container-modify{
-    max-width: 936px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-}
+
 
 @media (max-width: 991.98px) {
   .accordion-body {
@@ -616,8 +681,27 @@ a {
   }
 
   /* WORLD GAME SLIDER */
+  /* FIRST SLIDER  */
 
-  .world-game-slider .slick-list .slick-track .slick-current img {
+  .world-game-slider {
+    .slick-list .slick-track {
+      .slick-slide {
+        max-width: 450px;
+        max-height: 420px;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  .world-game-img-title{
+    font-size: 22px;
+  }
+  .world-game-img-description{
+    font-size: 18px;
+  }
+
+  /* SECOND SLIDER  */
+  /* .world-game-slider .slick-list .slick-track .slick-current img {
     max-width: 320px;
     height: 360px;
     opacity: 100%;
@@ -626,14 +710,14 @@ a {
   .world-game-arrow {
     bottom: 21%;
     right: 5%;
-  }
+  } */
 }
 
 @media (max-width: 767.98px) {
-  .world-game-arrow {
+  /* .world-game-arrow {
     right: 5%;
     bottom: 25%;
-  }
+  } */
 
   .faq_gradient {
     max-width: 190px;
@@ -645,6 +729,24 @@ a {
 
   .accordion-button::after {
     max-width: 15px;
+  }
+
+  .world-game-img-title{
+    font-size: 20px;
+  }
+  .world-game-img-description{
+    font-size: 16px;
+  }
+
+  .world-game-slider {
+    .slick-list .slick-track {
+      .slick-slide {
+        max-width: 400px;
+        max-height: 370px;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
 
@@ -661,8 +763,26 @@ a {
   .accordion-button::after {
     max-width: 10x;
   }
+  .world-game-img-title{
+    font-size: 18px;
+  }
+  .world-game-img-description{
+    font-size: 14px;
+  }
+  .world-game-slider {
+    .slick-list .slick-track {
+      .slick-slide {
+        max-width: 350px;
+        max-height: 320px;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 
-  /* WORLD GAME */
+
+  /* second Slider  */
+  /* WORLD GAME
   .world-game-slider .slick-list .slick-track .slick-current img {
     min-width: 210px;
     min-height: 240px;
@@ -679,5 +799,5 @@ a {
   }
   .world-game-arrow {
     bottom: 11%;
-  }
+  } */
 }
