--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -285,7 +285,7 @@ a {
 
 .world-game-slider .slick-dots .slick-active {
   width: 45px;
-  background-color: blue;
+  background-color: #39c6fd;
   border-radius: 10px;
 }
 
@@ -346,7 +346,6 @@ a {
 }
 
 .slick-dotted.slick-slider {
-  margin-bottom: 30px;
   z-index: 5;
 }
 
@@ -781,7 +780,6 @@ a {
   }
   .world-game-slider .slick-dots .slick-active {
     width: 25px !important;
-    background-color: blue;
     border-radius: 10px;
   }
   .world-game-slider .slick-dots li {
