add content after image and comment extra css

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -262,20 +262,17 @@ a {
 
 /* ===============WORLD GAME ============ */
 /* ======== FIRST SLIDER  */
-
-/*  */
-
-.world-game-slider .slick-dots li button:before {
+/* .world-game-slider .slick-dots li button:before {
   opacity: 0 !important;
 }
 
 .world-game-slider .slick-dots li {
   transition: 0.3s !important;
-}
+} */
 
 .world-game-slider .slick-dots {
   right: 0% !important;
-  bottom: -10% !important;
+  bottom: -30% !important;
 }
 
 .world-game-slider .slick-dots li {
@@ -289,41 +286,40 @@ a {
   border-radius: 10px;
 }
 
-
 .world-game-slider .slick-dots {
   display: flex;
-  margin-top: 10px;
-  bottom: -70px;
-  width: 55.5%;
+  /* margin-top: 10px; */
+  /* bottom: -70px; */
+  width: 53.5%;
 }
 
 .world-game-slider .slick-dots li button:before {
-  font-family: "slick";
-  font-size: 6px;
-  line-height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20px;
-  height: 20px;
+  /* font-family: "slick"; */
+  /* font-size: 6px; */
+  /* line-height: 20px; */
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  /* width: 20px; */
+  /* height: 20px; */
   content: "•";
-  text-align: center;
-  opacity: 0.25;
+  /* text-align: center; */
+  /* opacity: 0.25; */
   color: transparent !important;
 }
 
-.mt-60 {
+/* .mt-60 {
   margin-top: 60px;
-}
+} */
 
 .world-game-slider .slick-list {
   overflow: visible;
-  padding: 0 20% 0 0;
-  position: relative;
-  z-index: -1;
+  /* padding: 0 20% 0 0; */
+  /* position: relative; */
+  /* z-index: -1; */
 }
 
-.world-game-slider .slick-list::after {
+/* .world-game-slider .slick-list::after {
   content: " ";
   position: absolute;
   top: 0px;
@@ -331,25 +327,25 @@ a {
   width: 4000px;
   right: 100%;
   background-color: var(--white);
-}
+} */
 
-.world-game-slider .slick-dots {
+/* .world-game-slider .slick-dots {
   bottom: -25px;
   padding: 0;
   margin: 0;
   list-style: none;
   text-align: center;
-}
+} */
 
-.z-10 {
+/* .z-10 {
   z-index: 10;
-}
+} */
 
-.slick-dotted.slick-slider {
+/* .slick-dotted.slick-slider {
   z-index: 5;
-}
+} */
 
-.world-game-heading-box {
+/* .world-game-heading-box {
   max-width: 632px;
 
   h2 {
@@ -359,7 +355,7 @@ a {
   p {
     max-width: 516px;
   }
-}
+} */
 
 .world-game-slider {
   max-width: 1920px;
@@ -381,8 +377,7 @@ a {
 
 .center-text-div {
   width: 100%;
-  min-height: 25%;
-  bottom: -0.5%;
+  /* min-height: 25%; */
   background-color: rgba(0, 0, 0, 0.378);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -771,7 +766,6 @@ a {
 
   .world-game-slider .slick-dots {
     right: 5% !important;
-    bottom: -15% !important;  
   }
   .world-game-slider .slick-dots li button:before {
     width: 15px;
@@ -786,8 +780,4 @@ a {
     height: 15px !important;
     width: 15px !important;
   }
-  .center-text-div{
-    bottom: -2.5%;
-  }
-  
 }
