--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -261,18 +261,12 @@ a {
 }
 
 /* ===============WORLD GAME ============ */
-/* ======== FIRST SLIDER  */
-/* .world-game-slider .slick-dots li button:before {
-  opacity: 0 !important;
-}
-
 .world-game-slider .slick-dots li {
   transition: 0.3s !important;
-} */
+}
 
 .world-game-slider .slick-dots {
   right: 0% !important;
-  bottom: -30% !important;
 }
 
 .world-game-slider .slick-dots li {
@@ -288,77 +282,21 @@ a {
 
 .world-game-slider .slick-dots {
   display: flex;
-  /* margin-top: 10px; */
-  /* bottom: -70px; */
   width: 53.5%;
 }
 
 .world-game-slider .slick-dots li button:before {
-  /* font-family: "slick"; */
-  /* font-size: 6px; */
-  /* line-height: 20px; */
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
-  /* width: 20px; */
-  /* height: 20px; */
   content: "•";
-  /* text-align: center; */
-  /* opacity: 0.25; */
   color: transparent !important;
 }
 
-/* .mt-60 {
-  margin-top: 60px;
-} */
 
 .world-game-slider .slick-list {
   overflow: visible;
-  /* padding: 0 20% 0 0; */
-  /* position: relative; */
-  /* z-index: -1; */
 }
 
-/* .world-game-slider .slick-list::after {
-  content: " ";
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  width: 4000px;
-  right: 100%;
-  background-color: var(--white);
-} */
-
-/* .world-game-slider .slick-dots {
-  bottom: -25px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center;
-} */
-
-/* .z-10 {
-  z-index: 10;
-} */
-
-/* .slick-dotted.slick-slider {
-  z-index: 5;
-} */
-
-/* .world-game-heading-box {
-  max-width: 632px;
-
-  h2 {
-    line-height: 150%;
-  }
-
-  p {
-    max-width: 516px;
-  }
-} */
-
 .world-game-slider {
-  max-width: 1920px;
+  /* max-width: 1920px; */
   margin: auto;
   margin-top: 51px;
 
@@ -368,7 +306,7 @@ a {
 
     .slick-slide {
       max-width: 494px;
-      max-height: 461px;
+      /* max-height: 461px; */
       width: 100%;
       height: 100%;
     }
@@ -688,6 +626,10 @@ a {
       }
     }
   }
+  .world-game-slider .slick-dots {
+    bottom: -21% !important;
+    right: 4% !important;
+  }
 
   .world-game-img-title {
     font-size: 22px;
@@ -729,6 +671,11 @@ a {
       }
     }
   }
+  .world-game-slider .slick-dots {
+    bottom: -26% !important;
+    right: 7% !important;
+    z-index: 3;
+  }
 }
 
 @media (max-width: 575.98px) {
@@ -762,10 +709,6 @@ a {
         height: 100%;
       }
     }
-  }
-
-  .world-game-slider .slick-dots {
-    right: 5% !important;
   }
   .world-game-slider .slick-dots li button:before {
     width: 15px;
