--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,6 +10,8 @@ html {
 
 body {
   overflow-y: hidden;
+  max-width: 1920px;
+  margin: auto;
 }
 
 a {
@@ -290,13 +292,11 @@ a {
   color: transparent !important;
 }
 
-
 .world-game-slider .slick-list {
   overflow: visible;
 }
 
 .world-game-slider {
-  /* max-width: 1920px; */
   margin: auto;
   margin-top: 51px;
 
@@ -306,7 +306,6 @@ a {
 
     .slick-slide {
       max-width: 494px;
-      /* max-height: 461px; */
       width: 100%;
       height: 100%;
     }
@@ -315,7 +314,6 @@ a {
 
 .center-text-div {
   width: 100%;
-  /* min-height: 25%; */
   background-color: rgba(0, 0, 0, 0.378);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -626,6 +624,7 @@ a {
       }
     }
   }
+
   .world-game-slider .slick-dots {
     bottom: -21% !important;
     right: 4% !important;
@@ -671,6 +670,7 @@ a {
       }
     }
   }
+
   .world-game-slider .slick-dots {
     bottom: -26% !important;
     right: 7% !important;
@@ -710,15 +710,18 @@ a {
       }
     }
   }
+
   .world-game-slider .slick-dots li button:before {
     width: 15px;
     height: 15px;
     content: "•";
   }
+
   .world-game-slider .slick-dots .slick-active {
     width: 25px !important;
     border-radius: 10px;
   }
+
   .world-game-slider .slick-dots li {
     height: 15px !important;
     width: 15px !important;
