--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -313,29 +313,6 @@ a {
   }
 }
 
-/* SLIDER ARROWS */
-.left-arrow{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  top: 52%;
-  transform: translate(0, -50%);
-  cursor: pointer;
-}
-
-.right-arrow{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  top: 52%;
-  transform: translate(0, -50%);
-  cursor: pointer;
-}
-
-.rotate-180{
-  transform: rotate(180deg);  
-}
-
 .center-text-div {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.378);
@@ -364,6 +341,35 @@ a {
 
 .world-game-img-div:hover .world-game-img{
   scale: 1.1;
+}
+
+/* SLIDER ARROWS */
+.left-arrow{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  top: 52%;
+  transform: translate(0, -50%);
+  cursor: pointer;
+  box-shadow: 0px 0px 20px  #fff;
+}
+
+.right-arrow{
+  width: 70px;  
+  height: 70px;
+  border-radius: 50%;
+  top: 52%;
+  transform: translate(0, -50%);
+  cursor: pointer;
+  box-shadow: 0px 0px 20px  #fff;
+}
+
+.rotate-180{
+  transform: rotate(180deg);  
+}
+
+.bg-blue{
+  background-color: #070d37;
 }
 
 /*============ FAQs CSS START ============*/
@@ -644,9 +650,21 @@ a {
 /* SLIDER ARROWS */
 .left-arrow{
   left: 25px !important;
+  width: 50px !important;
+  height: 50px !important;
+  svg{
+    width: 25px ;
+    height: 30px  ;
+  }
 }
 .right-arrow{
   right: 25px !important;
+  width: 50px !important;
+  height: 50px !important;  
+  svg{
+    width: 25px ;
+    height: 30px  ;
+  }
 }
 
 @media (max-width: 991.98px) {
